# C--Make

./: .gitignore  CMakeLists.txt  Makefile  PreviewMakefile  Readme.html  Readme.md  create.conf  create.json  install.sh  m.json  makefile  test.conf
.cache/clangd/index/: compilers.h.C648B6DF77F25BCF.idx  exutils.h.EACD6DAF4C26CA06.idx  files.cc.9C6AC1C4CBDF525F.idx  files.h.B10A646FE407099A.idx  inputfile.cc.4032D9ED5A9BB899.idx  main.cc.3EE434A5A284AF5C.idx  make.cc.A1F12C060A328F67.idx  sync.cc.A97BA1B7AF8EB8EE.idx
includes/: compilers.h  exutils.h  files.h
src/: files.cc  inputfile.cc  install.cc  json.cc  main.cc  make.cc  sync.cc
